chore: face track
